tests/ShouldFail/match_unformed.ml
let x = 3 in match x with (x, y) -> 3 | _ -> 4;;
